convert all test code to be java 8 compatible
Signed-off-by: Jay DeLuca <jaydeluca4@gmail.com>